First try to have a fips agent env